[tool.poetry]
name = "corider-flask"
version = "0.1.0"
description = ""
authors = ["codeblech <my.malikyash@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
watchdog = "^6.0.0"
flask = "^3.1.0"
flask-pymongo = "^2.3.0"
email-validator = "^2.2.0"
flask-restx = "^1.3.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 89
target-version = ['py310']
include = '\.pyi?$'
exclude =  '''
/(
    | \.git
    | \.pytest_cache
    | \.vscode
    | __pycache__
    | _build
    | build
    | dist
    | venv
)/
'''